# rwa-with-ui

./: .gitignore  README.md
Backend/: .env.example  3rd_column.json  4th Column.json  5th Column.json  6th Column.json  Issue Types and Steps.xlsx  Main Data - Copy.xlsx  Main Data.xlsx  email two.md  email.md  graph.py  main.json  prompt.py  pyproject.toml  requirements.txt  sagemaker_start.sh  start_app.sh  test.py  test_graph.py  tools.py  webapp.py  webapp_api.py
Frontend/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js
Frontend/src/: index.html  styles.scss
Frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts  constants.ts
Frontend/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
Frontend/src/app/main/: main.component.html  main.component.ts
Frontend/src/app/rwa-agent/: rwa-agent-api.service.ts  rwa-agent.component.html  rwa-agent.component.ts
Frontend/src/app/shared/footer/: footer.component.html  footer.component.ts
Frontend/src/app/shared/header/: header.component.html  header.component.ts
Frontend/src/environments/: environment.ts
